--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,6 +4,11 @@
 
     <uses-permission android:name="android.permission.INTERNET" />
 
+    <!-- To auto-complete the email text field in the login form with the user's emails -->
+    <uses-permission android:name="android.permission.GET_ACCOUNTS" />
+    <uses-permission android:name="android.permission.READ_PROFILE" />
+    <uses-permission android:name="android.permission.READ_CONTACTS" />
+
     <application
         android:name=".application.SDOS"
         android:allowBackup="true"
@@ -22,23 +27,20 @@
             android:name="QUERY_LOG"
             android:value="false" />
 
-        <activity android:name=".loginScreen.LoginActivity"
-            android:windowSoftInputMode="adjustResize">
+        <activity android:name=".loginScreen.LoginActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".webserviceScreen.WebserviceActivity"/>
+        <activity android:name=".webserviceScreen.WebserviceActivity" />
         <activity android:name=".addTaskScreen.AddTaskActivity" />
-        <activity android:name=".taskListScreen.TaskListActivity"/>
+        <activity android:name=".taskListScreen.TaskListActivity" />
 
         <service
             android:name=".services.InitializeDBService"
             android:exported="false" />
-
-
     </application>
 
 </manifest>
